# monet-regrid

./: CHANGELOG.md  CITATION.cff  README.md  benchmark_curvilinear_optimization.py  benchmark_rectilinear_optimization.py  environment.yml  monet-regrid_rebranding_specification.md  pyproject.toml
backup/: pyproject.toml
backup/src/xarray_regrid/: __init__.py  constants.py  coordinate_transformer.py  core.py  curvilinear.py  interpolation_engine.py  regrid.py  utils.py
backup/src/xarray_regrid/methods/: conservative.py  interp.py
docs/: Makefile  api_documentation.md  conf.py  curvilinear_examples.md  getting_started.rst  getting_started_update.md  index.rst  index_update.md  make.bat
docs/notebooks/: index.rst
docs/notebooks/benchmarks/: benchmark_utils.py  benchmarking_bilinear.ipynb  benchmarking_bilinear.ipynb.bak  benchmarking_conservative.ipynb  benchmarking_conservative.ipynb.bak  benchmarking_curvilinear.ipynb  benchmarking_curvilinear.ipynb.bak  benchmarking_nearest.ipynb  benchmarking_nearest.ipynb.bak  benchmarking_rectilinear_vs_curvilinear.ipynb  benchmarking_rectilinear_vs_curvilinear.ipynb.bak  benchmarking_xesmf.ipynb  benchmarking_xesmf.ipynb.bak  methodology.md
docs/notebooks/benchmarks/data/: new_grid_con.nc
docs/notebooks/demos/: demo_conservative_nan_threshold.ipynb  demo_conservative_nan_threshold.ipynb.bak  demo_most_common.ipynb  demo_most_common.ipynb.bak  demo_variance.ipynb.bak
monet_regrid/: __init__.py  coordinate_transformer.py  core.py  curvilinear.py  interpolation_engine.py  regrid.py  utils.py
monet_regrid/methods/: conservative.py  flox_reduce.py  interp.py
src/monet_regrid/: regrid.py
src/monet_regrid/methods/: _shared.py
tests/: test_boundary_conditions.py  test_build_regridder_factory.py  test_coordinate_transformation.py  test_curvilinear.py  test_curvilinear_nan_handling.py  test_curvilinear_radius_of_influence.py  test_curvilinear_robustness.py  test_data_generation.py  test_format.py  test_grid_detection.py  test_integration.py  test_integration_framework.py  test_performance_benchmarks.py  test_polar_interpolation.py  test_radius_of_influence_comprehensive.py  test_rasm_fix.py  test_reduce.py  test_refactoring_summary.md  test_regrid.py  test_regridder_hierarchy.py  test_spatial_structures.py  test_utils.py
